--- a/index.ipynb
+++ b/index.ipynb
@@ -425,7 +425,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca_marker = neighborhoods[-1]"
+    "la_boca_marker = neighborhoods_markers[]"
    ]
   },
   {
