automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -472,11 +472,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<folium.map.Marker at 0x7f6fa318f630>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "neighborhood_markers.pop()"
+    "neighborhood_markers.pop(-1)\n",
+    "n"
    ]
   },
   {
