automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -472,23 +472,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<folium.map.Marker at 0x7f6fa318f630>"
+       "[<folium.map.Marker at 0x7f6fa318c3c8>,\n",
+       " <folium.map.Marker at 0x7f6fa318f0b8>,\n",
+       " <folium.map.Marker at 0x7f6fa318ca58>,\n",
+       " <folium.map.Marker at 0x7f6fa318f7b8>]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "neighborhood_markers.pop(-1)\n",
-    "n"
+    "neighborhood_markers"
    ]
   },
   {
