automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -472,35 +472,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<folium.map.Marker at 0x7f6fa314fda0>"
+       "[<folium.map.Marker at 0x7f6fa314f080>,\n",
+       " <folium.map.Marker at 0x7f6fa3181828>,\n",
+       " <folium.map.Marker at 0x7f6fa318c8d0>,\n",
+       " <folium.map.Marker at 0x7f6fa314f7b8>,\n",
+       " <folium.map.Marker at 0x7f6fa314f860>]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "neighborhood_markers.pop(-1)\n"
+    "neighborhood_markers\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n",
-      "False\n"
+      "5\n",
+      "True\n"
      ]
     }
    ],
