--- a/index.ipynb
+++ b/index.ipynb
@@ -526,7 +526,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "recoleta_marker = neighborhood_markers"
+    "recoleta_marker = neighborhood_markers[]"
    ]
   },
   {
